crates/compiler/tests/parse_errors/problem_in_def.txt
-- PROBLEM IN DEFINITION ------------------------------------------ src/Main.elm

I got stuck while parsing the `f` definition:

2| f x@ = 1
      ^
I am not sure what is going wrong exactly, so here is a valid definition (with
an optional type annotation) for reference:

    greet : String -> String
    greet name =
      "Hello " ++ name ++ "!"

Try to use that format!

